src/objects/Travel_Itinerary_MERC__c.object
<CustomObject>
    <fields>
        <fullName>Evaluate_Meeting_Process_Logic_MERC_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to kick-off Meeting Process Logic and Automation. Set via workflow, unchecked when code runs : MERC : Created on 22/06/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Evaluate Meeting Process Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Process_Logic_Key_MERC__c</fullName>
        <description>Used to compare against a matching key in the Meeting Process Logic object to drive the next set of automation : MERC : Created on 22/06/2015</description>
        <formula>&quot;Travel Proposal;&quot; &amp;  IF(Proposal_Counter_MERC__c &lt;= 1, &quot;TRUE&quot;, &quot;FALSE&quot;) &amp; &quot;;&quot; &amp; TEXT( Status_MERC__c )</formula>
        <label>Meeting Process Logic Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_MERC__c</fullName>
        <description>Used to order Travel Itinerary related list : MERC : Created on 9th July 2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>IF
	(RecordType.DeveloperName = &apos;MERC_Travel_Proposal&apos;, 
		Name &amp; TEXT(CASE(Proposal_Counter_MERC__c,	1,99, 
                             						2,98,
                             						3,97,
                             						4,96,
                             						5,95,
                             						6,94,
                             						7,93,
                             						8,92,
                             						9,91,
													10,90,
													11,89,
													12,87,
													13,86,
													14,85,
													0
					)
	)
,

IF
	(((RecordType.DeveloperName = &apos;Air_MERC&apos;) || (RecordType.DeveloperName = &apos;Bus&apos;) || (RecordType.DeveloperName = &apos;Rail_MERC&apos;))

	, 
		Travel_Proposal_MERC__r.Name &amp; &quot; - &quot; &amp; TEXT(CASE(Segment_Number__c,	1,99, 
                             												2,98,
                             												3,97,
                             												4,96,
                             												5,95,
                             												6,94,
                             												7,93,
                             												8,92,
                             												9,91,
                             												10,90,
																			11,89,
																			12,87,
																			13,86,
																			14,85,
                             												0

													)
	)
,

IF
	(((RecordType.DeveloperName = &apos;Car_MERC&apos;) || (RecordType.DeveloperName = &apos;Hotel_MERC&apos;))
	,
		Name,Name
	)
	)
)</formula>
        <label>Ordering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Counter_MERC__c</fullName>
        <description>Captures the number of proposals for the associated meting participant. Initially created for triggering of delegate management processes : MERC : Created on 19/06/2015 by Kyle Thornton, Mavens Consulting</description>
        <label>Proposal Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment_Begin_Timezone_MERC__c</fullName>
        <label>Segment Begin Timezone</label>
        <picklist>
            <picklistValues>
                <fullName>Line Islands Time (Pacific/Kiritimati)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatham Daylight Time (Pacific/Chatham)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand Daylight Time (Pacific/Auckland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix Islands Time (Pacific/Enderbury)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji Summer Time (Pacific/Fiji)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tonga Time (Pacific/Tongatapu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magadan Time (Asia/Kamchatka)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norfolk Islands Time (Pacific/Norfolk)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lord Howe Daylight Time (Australia/Lord_Howe)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Eastern Daylight Time (Australia/Sydney)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solomon Islands Time (Pacific/Guadalcanal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Central Daylight Time (Australia/Adelaide)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Eastern Standard Time (Australia/Brisbane)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Central Standard Time (Australia/Darwin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean Standard Time (Asia/Seoul)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan Standard Time (Asia/Tokyo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong Time (Asia/Hong_Kong)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia Time (Asia/Kuala_Lumpur)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippine Time (Asia/Manila)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Standard Time (Asia/Shanghai)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore Standard Time (Asia/Singapore)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taipei Standard Time (Asia/Taipei)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Western Standard Time (Australia/Perth)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indochina Time (Asia/Bangkok)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indochina Time (Asia/Ho_Chi_Minh)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Indonesia Time (Asia/Jakarta)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Myanmar Time (Asia/Rangoon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh Time (Asia/Dhaka)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nepal Time (Asia/Kathmandu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Standard Time (Asia/Colombo)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment_End_Timezone_MERC__c</fullName>
        <label>Segment End Timezone</label>
        <picklist>
            <picklistValues>
                <fullName>Line Islands Time (Pacific/Kiritimati)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatham Daylight Time (Pacific/Chatham)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand Daylight Time (Pacific/Auckland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix Islands Time (Pacific/Enderbury)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji Summer Time (Pacific/Fiji)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tonga Time (Pacific/Tongatapu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magadan Time (Asia/Kamchatka)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norfolk Islands Time (Pacific/Norfolk)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lord Howe Daylight Time (Australia/Lord_Howe)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Eastern Daylight Time (Australia/Sydney)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solomon Islands Time (Pacific/Guadalcanal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Central Daylight Time (Australia/Adelaide)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Eastern Standard Time (Australia/Brisbane)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Central Standard Time (Australia/Darwin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean Standard Time (Asia/Seoul)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan Standard Time (Asia/Tokyo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong Time (Asia/Hong_Kong)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia Time (Asia/Kuala_Lumpur)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippine Time (Asia/Manila)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Standard Time (Asia/Shanghai)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore Standard Time (Asia/Singapore)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taipei Standard Time (Asia/Taipei)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Western Standard Time (Australia/Perth)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indochina Time (Asia/Bangkok)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indochina Time (Asia/Ho_Chi_Minh)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Indonesia Time (Asia/Jakarta)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Myanmar Time (Asia/Rangoon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh Time (Asia/Dhaka)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nepal Time (Asia/Kathmandu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Standard Time (Asia/Colombo)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_MERC__c</fullName>
        <description>If the HCP cancels travel or does not use it, the record can be Cancelled.  This then removes any ToV from the associated meeting for that HCP.  Oliver Dunford 11th June 2014.</description>
        <inlineHelpText>If the HCP cancels attendance, or the ToV attributed to this record should not be reported within Mercury due to a No Show, the record can be updated to Cancelled.  Confirmed records are reportable.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticketed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <recordTypes>
        <fullName>Air_MERC</fullName>
        <active>true</active>
        <description>Air Travel Information</description>
        <label>Air</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bus</fullName>
        <active>true</active>
        <description>Bus Travel Information</description>
        <label>Bus</label>
    </recordTypes>
    <recordTypes>
        <fullName>Car_MERC</fullName>
        <active>true</active>
        <description>Rental Car or Car Service Information or Private Transfer</description>
        <label>Car Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hotel_MERC</fullName>
        <active>true</active>
        <description>Hotel Information</description>
        <label>Hotel</label>
    </recordTypes>
    <recordTypes>
        <fullName>MERC_Travel_Proposal</fullName>
        <active>true</active>
        <description>Used to create Travel Proposals for Meeting Participants</description>
        <label>Travel Proposal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rail_MERC</fullName>
        <active>true</active>
        <description>Rail Travel Information</description>
        <label>Rail</label>
    </recordTypes>
    <validationRules>
        <fullName>No_Segment_Status_Chnge_B4_Proposal_MERC</fullName>
        <active>true</active>
        <description>14JULY2015 BHo - This validation rule will prevent a user from changing the status of a Segment to Confirmed before changing the status of the Proposal.</description>
        <errorConditionFormula>((RecordType.DeveloperName = &quot;Air_MERC&quot;) ||
(RecordType.DeveloperName = &quot;Bus&quot;) ||
(RecordType.DeveloperName = &quot;Rail_MERC&quot;))
&amp;&amp;
TEXT(Status_MERC__c) = &quot;Confirmed&quot;
&amp;&amp;
TEXT(Travel_Proposal_MERC__r.Status_MERC__c) = &quot;Draft&quot;</errorConditionFormula>
        <errorMessage>The Status of each Segment can only be set to Cancelled, please use the Travel Proposal Status to indicate the progress of the Proposal, the Segment Status values will then automatically get updated.</errorMessage>
    </validationRules>
</CustomObject>